# spark-starlight

./: Cargo.toml  Cross.toml
spark-ffmpeg/: Cargo.toml  build.rs
spark-ffmpeg/ffi/: ffmpeg.h
spark-ffmpeg/src/: lib.rs
spark-ffmpeg/src/av_io_context/: mod.rs
spark-ffmpeg/src/av_mem_alloc/: mod.rs
spark-ffmpeg/src/av_rational/: mod.rs
spark-ffmpeg/src/avcodec/: codec_context.rs  mod.rs  open_codec.rs
spark-ffmpeg/src/avfilter_context/: alloc.rs  apply.rs  mod.rs
spark-ffmpeg/src/avfilter_graph/: alloc.rs  mod.rs
spark-ffmpeg/src/avformat/: av_frame_reader.rs  av_stream.rs  avformat_context.rs  mod.rs
spark-ffmpeg/src/avframe/: avframe.rs  frame_info.rs  mod.rs  open_frame.rs
spark-ffmpeg/src/avpacket/: file_io.rs  mod.rs  new_packet.rs
spark-ffmpeg/src/avstream/: mod.rs
spark-ffmpeg/src/ffi_enum/: mod.rs
spark-ffmpeg/src/pixel/: frames.rs  mod.rs  pixel_formater.rs
spark-ffmpeg/src/pixformat/: mod.rs
spark-ffmpeg/src/sws/: mod.rs  new_sws.rs
spark-ffmpeg/src/util/: error_handler.rs  error_handler_macros.rs  mod.rs  ptr_wrapper.rs  wraper_macros.rs  wrapper_macros.rs
spark-inference/: Cargo.toml  build.rs
spark-inference/src/: lib.rs
spark-inference/src/cuda/: cuda.rs  cuda_macros.rs  cuda_sam.rs  cuda_yolo.rs  mod.rs
spark-inference/src/engine/: inference_engine.rs  mod.rs  run.rs
spark-inference/src/engine/entity/: box_point.rs  mod.rs
spark-inference/src/entity/: box_point.rs  mod.rs
spark-inference/src/inference/: inference_sam.rs  inference_yolo.rs  mod.rs  sam_former_state.rs  sam_image_inference.rs  sam_video_inference.rs
spark-inference/src/inference/sam/: former_state.rs  image_inference.rs  mod.rs  video_inference.rs
spark-inference/src/inference/sam/video_inference/: inference_state.rs  mod.rs  video_inference.rs
spark-inference/src/inference/tts/: mod.rs  native.rs  raw.rs  tts_engine.rs
spark-inference/src/inference/yolo/: inference_yolo_detect.rs  inference_yolo_seg.rs  mod.rs
spark-inference/src/utils/: cuda.rs  cuda_macros.rs  extractor.rs  graph.rs  masks.rs  mod.rs  ptr_wrapper.rs  tensor.rs
spark-media/: Cargo.toml
spark-media/src/: lib.rs
spark-media/src/decoder/: image_decoder.rs
spark-media/src/encoder/: save_image.rs
spark-media/src/filter/: avfilter_init.rs  filter.rs  mod.rs
spark-media/src/image/: image.rs  mod.rs
spark-media/src/image/decoder/: image_decoder.rs  mod.rs  size.rs
spark-media/src/image/encoder/: edit_raw.rs  mod.rs  save_image.rs
spark-media/src/image/util/: extract.rs  field.rs  image_filter.rs  image_inner.rs  image_util.rs  inner_lock.rs  inner_util.rs  mod.rs
spark-media/src/image_util/: extract.rs
spark-proc_macro/: Cargo.toml
spark-proc_macro/src/: clone_derive.rs  keyword.rs  lib.rs  native_wrapper.rs
spark-starlight/: Cargo.toml
spark-starlight/src/: main.rs
spark-starlight/src/debug/: mod.rs
spark-starlight/src/detect/: anchor.rs  constants.rs  mask.rs  mod.rs
spark-starlight/src/detect/analysis/: compose.rs  dispatch_macro.rs  mod.rs  object_detected_describer.rs  obstacle_describer.rs  path_ending_describer.rs  road_shape_describer.rs  road_start_describer.rs  user_position_describer.rs
spark-starlight/src/detect/property/: analyse_result.rs  center_line.rs  direction.rs  distance.rs  mod.rs  obstacle.rs  road_shape.rs
spark-starlight/tests/: maintestrs.rs
(+17 files in other folders)
