[package]
name = "spark-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"

rayon = "1.10.0"
bitvec = "1.0.1"
num = "0.4.3"

anyhow = "1.0.97"

cudarc = { version = "0.13.9", features = ["cuda-version-from-build-system", "cudnn"] }
parking_lot = { version = "0.12", features = ["nightly"] }
zenoh = "1.3.0"

spark-ffmpeg = { path = "../spark-ffmpeg" }
spark-media = { path = "../spark-media" }
#ndarray-npy = "0.9.1"

[dependencies.ndarray]
version = "0.16.1"
features = ["rayon", "matrixmultiply-threading"]

[dependencies.ort]
git = "https://github.com/pykeio/ort.git"
features = ["tensorrt", "cuda", "load-dynamic", "ndarray"]
