[package]
name = "spark-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"

rayon = "1.10.0"
bitvec = "1.0.1"
num = "0.4.3"

anyhow = "1.0.97"

cudarc = { version = "0.15.0", features = ["cuda-version-from-build-system"] }
parking_lot = { version = "0.12", features = ["nightly"] }

hound = "3.5.1"

spark-ffmpeg = { path = "../spark-ffmpeg" }
spark-media = { path = "../spark-media" }

[dependencies.ndarray]
version = "0.16.1"
features = ["rayon", "matrixmultiply-threading"]

[dependencies.ort]
default-features = false
git = "https://github.com/pykeio/ort.git"
features = ["std", "ndarray", "copy-dylibs", "load-dynamic", "cuda"]
