[package]
name = "spark-starlight"
version = "0.1.0"
edition = "2021"

[dependencies]
spark-inference = { path = "../spark-inference" }
spark-media = { path = "../spark-media" }

ndarray = { version = "0.16.1", features = ["rayon"] }
bitvec = "1.0.1"
itertools = "0.13.0"
rayon = "1.10.0"

anyhow = "1.0.93"