[package]
name = "spark-starlight"
version = "0.1.0"
edition = "2021"

[dependencies]
spark-inference = { path = "../spark-inference" }
spark-media = { path = "../spark-media" }

mimalloc = "0.1.46"
bitvec = "1.0.1"

anyhow = "1.0.97"
log = "0.4.27"
tracing-subscriber = "0.3"

tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
actix-web = "4.10.2"
bytes = "1.10.1"